// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`#1649 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "file": "/path/to/1649/pages/account/addresses.vue",
        "name": "account-addresses___en",
        "path": "addresses",
      },
      {
        "children": [],
        "file": "/path/to/1649/pages/account/index.vue",
        "name": "account___en",
        "path": "",
      },
      {
        "children": [],
        "file": "/path/to/1649/pages/account/profile.vue",
        "name": "account-profile___en",
        "path": "profile",
      },
    ],
    "file": "/path/to/1649/pages/account.vue",
    "path": "/account",
  },
  {
    "children": [
      {
        "children": [],
        "file": "/path/to/1649/pages/account/addresses.vue",
        "name": "account-addresses___ja",
        "path": "addresses",
      },
      {
        "children": [],
        "file": "/path/to/1649/pages/account/index.vue",
        "name": "account___ja",
        "path": "",
      },
      {
        "children": [],
        "file": "/path/to/1649/pages/account/profile.vue",
        "name": "account-profile___ja",
        "path": "profile",
      },
    ],
    "file": "/path/to/1649/pages/account.vue",
    "path": "/ja/account",
  },
  {
    "children": [
      {
        "children": [],
        "file": "/path/to/1649/pages/account/addresses.vue",
        "name": "account-addresses___fr",
        "path": "/fr/compte/adresses",
      },
      {
        "children": [],
        "file": "/path/to/1649/pages/account/index.vue",
        "name": "account___fr",
        "path": "",
      },
      {
        "children": [],
        "file": "/path/to/1649/pages/account/profile.vue",
        "name": "account-profile___fr",
        "path": "/fr/compte/profil",
      },
    ],
    "file": "/path/to/1649/pages/account.vue",
    "path": "/fr/compte",
  },
  {
    "children": [],
    "file": "/path/to/1649/pages/index.vue",
    "name": "index___en",
    "path": "/",
  },
  {
    "children": [],
    "file": "/path/to/1649/pages/index.vue",
    "name": "index___ja",
    "path": "/ja",
  },
  {
    "children": [],
    "file": "/path/to/1649/pages/index.vue",
    "name": "index___fr",
    "path": "/fr",
  },
]
`;

exports[`#1649 2`] = `
[
  {
    "children": [
      {
        "children": [],
        "file": "/path/to/1649/pages/account/addresses.vue",
        "locale": "en",
        "name": "account-addresses___en",
        "path": "addresses",
      },
      {
        "children": [],
        "file": "/path/to/1649/pages/account/index.vue",
        "locale": "en",
        "name": "account___en",
        "path": "",
      },
      {
        "children": [],
        "file": "/path/to/1649/pages/account/profile.vue",
        "locale": "en",
        "name": "account-profile___en",
        "path": "profile",
      },
    ],
    "file": "/path/to/1649/pages/account.vue",
    "locale": "en",
    "path": "/account",
  },
  {
    "children": [
      {
        "children": [],
        "file": "/path/to/1649/pages/account/addresses.vue",
        "locale": "ja",
        "name": "account-addresses___ja",
        "path": "addresses",
      },
      {
        "children": [],
        "file": "/path/to/1649/pages/account/index.vue",
        "locale": "ja",
        "name": "account___ja",
        "path": "",
      },
      {
        "children": [],
        "file": "/path/to/1649/pages/account/profile.vue",
        "locale": "ja",
        "name": "account-profile___ja",
        "path": "profile",
      },
    ],
    "file": "/path/to/1649/pages/account.vue",
    "locale": "ja",
    "path": "/ja/account",
  },
  {
    "children": [
      {
        "children": [],
        "file": "/path/to/1649/pages/account/addresses.vue",
        "locale": "fr",
        "name": "account-addresses___fr",
        "path": "/fr/compte/adresses",
      },
      {
        "children": [],
        "file": "/path/to/1649/pages/account/index.vue",
        "locale": "fr",
        "name": "account___fr",
        "path": "",
      },
      {
        "children": [],
        "file": "/path/to/1649/pages/account/profile.vue",
        "locale": "fr",
        "name": "account-profile___fr",
        "path": "/fr/compte/profil",
      },
    ],
    "file": "/path/to/1649/pages/account.vue",
    "locale": "fr",
    "path": "/fr/compte",
  },
  {
    "children": [],
    "file": "/path/to/1649/pages/index.vue",
    "locale": "en",
    "name": "index___en",
    "path": "/",
  },
  {
    "children": [],
    "file": "/path/to/1649/pages/index.vue",
    "locale": "ja",
    "name": "index___ja",
    "path": "/ja",
  },
  {
    "children": [],
    "file": "/path/to/1649/pages/index.vue",
    "locale": "fr",
    "name": "index___fr",
    "path": "/fr",
  },
]
`;

exports[`Module configuration > dynamic parameters 1`] = `
[
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/blog/[date]/[slug].vue",
    "name": "blog-date-slug___en",
    "path": "/blog/:date/:slug",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/blog/[date]/[slug].vue",
    "name": "blog-date-slug___ja",
    "path": "/ja/blog/tech/:date()/:slug()",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/blog/[date]/[slug].vue",
    "name": "blog-date-slug___fr",
    "path": "/fr/blog/:date/:slug",
  },
]
`;

exports[`Module configuration > dynamic parameters 2`] = `
[
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/blog/[date]/[slug].vue",
    "locale": "en",
    "name": "blog-date-slug___en",
    "path": "/blog/:date/:slug",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/blog/[date]/[slug].vue",
    "locale": "ja",
    "name": "blog-date-slug___ja",
    "path": "/ja/blog/tech/:date()/:slug()",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/blog/[date]/[slug].vue",
    "locale": "fr",
    "name": "blog-date-slug___fr",
    "path": "/fr/blog/:date/:slug",
  },
]
`;

exports[`Module configuration > simple 1`] = `
[
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "path": "/about-us",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "path": "/ja/about-us",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "path": "/fr/a-propos",
  },
]
`;

exports[`Module configuration > simple 2`] = `
[
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "locale": "en",
    "path": "/about-us",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "locale": "ja",
    "path": "/ja/about-us",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "locale": "fr",
    "path": "/fr/a-propos",
  },
]
`;

exports[`Module configuration > the part of URL 1`] = `
[
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "path": "/about",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "path": "/ja/about",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "path": "/fr/a-propos",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/coaching.vue",
    "name": "services-coaching___en",
    "path": "/services/coaching",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/coaching.vue",
    "name": "services-coaching___ja",
    "path": "/ja/services/coaching",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/coaching.vue",
    "name": "services-coaching___fr",
    "path": "/fr/offres/formation",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/app.vue",
    "name": "services-development-app___en",
    "path": "/services/development/app",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/app.vue",
    "name": "services-development-app___ja",
    "path": "/ja/services/development/app",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/app.vue",
    "name": "services-development-app___fr",
    "path": "/fr/offres/developement/app",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/index.vue",
    "name": "services-development___en",
    "path": "/services/development",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/index.vue",
    "name": "services-development___ja",
    "path": "/ja/services/development",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/index.vue",
    "name": "services-development___fr",
    "path": "/fr/offres/developement",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/website.vue",
    "name": "services-development-website___en",
    "path": "/services/development/website",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/website.vue",
    "name": "services-development-website___ja",
    "path": "/ja/services/development/website",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/website.vue",
    "name": "services-development-website___fr",
    "path": "/fr/offres/developement/site-web",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/index.vue",
    "name": "services___en",
    "path": "/services",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/index.vue",
    "name": "services___ja",
    "path": "/ja/services",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/index.vue",
    "name": "services___fr",
    "path": "/fr/offres",
  },
]
`;

exports[`Module configuration > the part of URL 2`] = `
[
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "locale": "en",
    "path": "/about",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "locale": "ja",
    "path": "/ja/about",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "locale": "fr",
    "path": "/fr/a-propos",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/coaching.vue",
    "locale": "en",
    "name": "services-coaching___en",
    "path": "/services/coaching",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/coaching.vue",
    "locale": "ja",
    "name": "services-coaching___ja",
    "path": "/ja/services/coaching",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/coaching.vue",
    "locale": "fr",
    "name": "services-coaching___fr",
    "path": "/fr/offres/formation",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/app.vue",
    "locale": "en",
    "name": "services-development-app___en",
    "path": "/services/development/app",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/app.vue",
    "locale": "ja",
    "name": "services-development-app___ja",
    "path": "/ja/services/development/app",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/app.vue",
    "locale": "fr",
    "name": "services-development-app___fr",
    "path": "/fr/offres/developement/app",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/index.vue",
    "locale": "en",
    "name": "services-development___en",
    "path": "/services/development",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/index.vue",
    "locale": "ja",
    "name": "services-development___ja",
    "path": "/ja/services/development",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/index.vue",
    "locale": "fr",
    "name": "services-development___fr",
    "path": "/fr/offres/developement",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/website.vue",
    "locale": "en",
    "name": "services-development-website___en",
    "path": "/services/development/website",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/website.vue",
    "locale": "ja",
    "name": "services-development-website___ja",
    "path": "/ja/services/development/website",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/website.vue",
    "locale": "fr",
    "name": "services-development-website___fr",
    "path": "/fr/offres/developement/site-web",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/index.vue",
    "locale": "en",
    "name": "services___en",
    "path": "/services",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/index.vue",
    "locale": "ja",
    "name": "services___ja",
    "path": "/ja/services",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/index.vue",
    "locale": "fr",
    "name": "services___fr",
    "path": "/fr/offres",
  },
]
`;

exports[`Page components > JavaScript 1`] = `
[
  {
    "children": [],
    "path": "/about-us",
  },
  {
    "children": [],
    "path": "/ja/about-ja",
  },
  {
    "children": [],
    "path": "/fr/a-propos",
  },
]
`;

exports[`Page components > JavaScript 2`] = `
[
  {
    "children": [],
    "locale": "en",
    "path": "/about-us",
  },
  {
    "children": [],
    "locale": "ja",
    "path": "/ja/about-ja",
  },
  {
    "children": [],
    "locale": "fr",
    "path": "/fr/a-propos",
  },
]
`;

exports[`Page components > dynamic route 1`] = `
[
  {
    "children": [],
    "name": "articles-name___en",
    "path": "/articles/:name()",
  },
  {
    "children": [],
    "name": "articles-name___ja",
    "path": "/ja/%E8%A8%98%E4%BA%8B/:name()",
  },
  {
    "children": [],
    "name": "articles-name___fr",
    "path": "/fr/articles/:name()",
  },
]
`;

exports[`Page components > dynamic route 2`] = `
[
  {
    "children": [],
    "locale": "en",
    "name": "articles-name___en",
    "path": "/articles/:name()",
  },
  {
    "children": [],
    "locale": "ja",
    "name": "articles-name___ja",
    "path": "/ja/%E8%A8%98%E4%BA%8B/:name()",
  },
  {
    "children": [],
    "locale": "fr",
    "name": "articles-name___fr",
    "path": "/fr/articles/:name()",
  },
]
`;

exports[`Page components > simple 1`] = `
[
  {
    "children": [],
    "path": "/about-us",
  },
  {
    "children": [],
    "path": "/ja/about-ja",
  },
  {
    "children": [],
    "path": "/fr/a-propos",
  },
]
`;

exports[`Page components > simple 2`] = `
[
  {
    "children": [],
    "locale": "en",
    "path": "/about-us",
  },
  {
    "children": [],
    "locale": "ja",
    "path": "/ja/about-ja",
  },
  {
    "children": [],
    "locale": "fr",
    "path": "/fr/a-propos",
  },
]
`;

exports[`Page components > with definePageMeta 1`] = `
[
  {
    "children": [],
    "path": "/about-us",
  },
  {
    "children": [],
    "path": "/ja/about-ja",
  },
  {
    "children": [],
    "path": "/fr/a-propos",
  },
]
`;

exports[`Page components > with definePageMeta 2`] = `
[
  {
    "children": [],
    "locale": "en",
    "path": "/about-us",
  },
  {
    "children": [],
    "locale": "ja",
    "path": "/ja/about-ja",
  },
  {
    "children": [],
    "locale": "fr",
    "path": "/fr/a-propos",
  },
]
`;
